website fix on mobile

--- a/client/stylesheets/website/_website_home.scss
+++ b/client/stylesheets/website/_website_home.scss
@@ -47,7 +47,7 @@
         }
       }
 
-      a {
+      .button {
 
         @include below ($break-phone) {
           display: block;
